@@ -8,9 +8,5 @@
 
 <body>
 
-TODO: Should TOC go here? Many Eclipse help packages have a TOC at this level but it's just
-a repeat of the tree view available in the Help System. (This is not discussed in section 15.6, RFRS Considerations
-of the Eclipse Plug-ins Third Edition book.)
-
 </body>
 </html>
